# myFTP

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: client_init.h  command_functions.h  command_handler.h  command_line_parser.h  get_next_command.h  get_user_and_password.h  server.h  tools.h
src/: client_init.c  command_cdup.c  command_cwd.c  command_dele.c  command_handler.c  command_help.c  command_line_parser.c  command_list.c  command_noop.c  command_pass.c  command_pasv.c  command_port.c  command_pwd.c  command_quit.c  command_retr.c  command_stor.c  command_syst.c  command_unknown.c  command_user.c  get_next_command.c  get_user_and_password.c  main.c  server.c  server_cleanup.c  server_init.c  server_logic.c  server_responses.c  server_responses_command_cwd.c  server_responses_command_delete.c  server_responses_command_pasv.c  server_responses_command_port.c  server_responses_command_retr.c  server_responses_commands.c  server_responses_login.c  tools.c
